--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ subtitle: The animal friendly clothing company
 				<li>
 					{% include product-styles.html product=product %}
 					<div class="product-details">
-						<h4><a href="{{ product.url }}">{{ product.name }}</a></h4>
+						<h4><a href="{{ site.baseurl }}{{ product.url }}">{{ product.name }}</a></h4>
 						<div class="product-description">
 							{{ product.description_markdown | truncate: 45 | markdownify }}
 						</div>
