Add data attribute for products

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ hero: Find your spirit animal
 subtitle: The animal friendly clothing company
 ---
 
-<div class="content" id="products">
+<div class="content" id="products" data-test-name="shop for products">
 	<section>
 		<div class="container">
 			<ul class="product-list">
